--- a/company_krichen_production/pubspec.yaml
+++ b/company_krichen_production/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   firebase_core:
   image_picker: "^0.6.7+17"
   firebase_storage: "^7.0.0"
-  firestore_search:  
+  firestore_search: 
+  flutter_svg: 
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +55,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/ 
+     - assets/images/
+     - assets/icons/ 
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
